@@ -25,6 +25,8 @@ Version 1.5.1 -- CVS
   - Fix test for LOGINDISABLED, should only test when the auth_mech actually
     is 'login'.
   - Update required PHP version to 4.1.0, and remove PHP 4.0.x legacy code.
+  - Make writing of preferences, abook, calendars fail better when disk full
+    (#915527).
 
 Version 1.5.0
 --------------------
